# GD32F30xProg

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  DEVICE_STATE_MACHINE.md  GD32F30x.snw  MATH_UTILS_REFACTOR.md  README.md  SENSORLESS_README.md  TWELVE_PULSE_QUICKSTART.md  TWELVE_PULSE_README.md
Application/: CMakelists.txt
Application/Inc/: Buffer.h  Initialization.h  MTPA.h  foc.h  foc_types.h  gd32f30x_it.h  identification.h  injection.h  main.h  main_int.h  main_int_simplified.h  motor.h  parameters.h  protect.h
Application/Src/: Buffer.c  Initialization.c  MTPA.c  foc.c  gd32f30x_it.c  identification.c  injection.c  main.c  main_int.c  main_int_simplified.c  motor.c  protect.c
Communication/: CMakelists.txt
Communication/Inc/: com.h
Communication/Protocol/: CMakelists.txt
Communication/Protocol/CCP/Inc/: ccp.h  ccp_interface.h
Communication/Protocol/CCP/Src/: ccp_interface.c
Communication/Protocol/vofa_justfloat/: justfloat.h
Communication/Src/: com.c
Core/: CMakelists.txt
Core/Inc/: adc.h  can.h  delay.h  dma.h  filter.h  foc.h  gd32f30x_it.h  gpio.h  main.h  math_utils.h  position_sensor.h  sensorless.h  sensorless_interface.h  systick.h  temp_table.h  tim.h  usart.h
Core/Src/: adc.c  can.c  dma.c  filter.c  filter_usage_example.c  foc.c  gd32f30x_it.c  gpio.c  main.c  math_utils.c  position_sensor.c  sensorless.c  sensorless_example.c  sensorless_interface.c  systick.c  temp_table.c  tim.c  usart.c
Drivers/: CMakelists.txt
Drivers/CCP/Inc/: ccp.h  ccp_interface.h  ccppar.h
Drivers/CCP/Src/: ccp.c  ccp_interface.c
Drivers/CMSIS/: CMakelists.txt
Drivers/CMSIS/GD/GD32F30x/Include/: gd32f30x.h
Drivers/CMSIS/GD/GD32F30x/Source/: system_gd32f30x.c
Drivers/GD32F30x_standard_peripheral/: CMakelists.txt
Drivers/GD32F30x_standard_peripheral/Include/: gd32f30x_can.h
Drivers/GD32F30x_standard_peripheral/Source/: gd32f30x_can.c
Drivers/Hardware_Configure/: gd32f30x_flash.ld
Examples/TwelvePulse/: README.md
Examples/TwelvePulse/Inc/: main_example_twelve_pulse.h  twelve_pulse_example.h
Examples/TwelvePulse/Src/: main_example_twelve_pulse.c  twelve_pulse_example.c
Middleware/: CMakelists.txt  CMakelists_simplified.txt
Middleware/Communication_Interface/Inc/: com_frame.h  com_interface.h  com_types.h
Middleware/Communication_Interface/Src/: com_interface.c
Middleware/Hardware_Interface/Inc/: hardware_interface.h  hw_interface.h  hw_types_bridge.h
Middleware/Hardware_Interface/Src/: hardware_interface.c  hw_interface.c
Middleware/Sensorless_Interface/: USAGE.md
Middleware/Sensorless_Interface/Inc/: sensorless_interface.h
Middleware/Sensorless_Interface/Src/: sensorless_interface.c
Sensorless/: CMakeLists.txt
Sensorless/Inc/: flux_observer.h  flying.h  hf_injection.h  leso.h  smo.h
Sensorless/Src/: flux_observer.c  flying.c  hf_injection.c  leso.c  smo.c
Tools/: A2LFilter.py  flash.jlink
Utils/: CMakeLists.txt
Utils/Inc/: filter.h  pid.h  pll.h  reciprocal.h  signal.h  theta_calc.h  transformation.h
Utils/Src/: filter.c  pid.c  pll.c  signal.c
cmake/: gcc-arm-none-eabi.cmake
cmake/GigaFirmware/: CMakeLists.txt
utils/: A2LFilter.ps1  A2LFilter.py
